--- a/matrix/synapse/values.yaml
+++ b/matrix/synapse/values.yaml
@@ -19,7 +19,7 @@ matrix-synapse:
   image:
     repository: alexbabel/synapse
     tag: v1.64.0
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
 
   signingkey:
     key: "set in secrets.values.yaml" # Set in secrets.values.yaml
